docs/core/v0.17/_sources/reference/tmlt/core/transformations/spark_transformations/add_remove_keys/index.rst.txt



**********************
add_remove_keys
**********************

.. py:module:: tmlt.core.transformations.spark_transformations.add_remove_keys

.. autoapi-nested-parse::

   Transformations that transform dictionaries using :class:`~.AddRemoveKeys`.

   Note that several of the transformations in :mod:`~.dictionary` also support
   :class:`~.AddRemoveKeys`. In particular

   * :class:`~.CreateDictFromValue`
   * :class:`~.GetValue`
   * :class:`~.Subset`

   The transformations defined in this module are required because
   :class:`~.AugmentDictTransformation` is not stable under :class:`~.AddRemoveKeys` for
   all transformations.

   For example, consider the following example:

   ..
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.transformations.spark_transformations.truncation import (
       ...     LimitRowsPerGroup
       ... )
       >>> from tmlt.core.domains.spark_domains import SparkStringColumnDescriptor
       >>> from tmlt.core.transformations.spark_transformations.id import AddUniqueColumn
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()

   >>> # Create transformation
   >>> input_domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkStringColumnDescriptor(),
   ...         "B": SparkStringColumnDescriptor(),
   ...     }
   ... )
   >>> input_metric = IfGroupedBy("A", SymmetricDifference())
   >>> truncate = LimitRowsPerGroup(
   ...     input_domain=input_domain,
   ...     output_metric=SymmetricDifference(),
   ...     grouping_column="A",
   ...     threshold=1,
   ... )
   >>> rename = Rename(
   ...     input_domain=input_domain,
   ...     metric=SymmetricDifference(),
   ...     rename_mapping={"A": "C", "B": "D"},
   ... )
   >>> create_unique_column = AddUniqueColumn(
   ...     input_domain=rename.output_domain,
   ...     column="A",
   ... )
   >>> transformation = truncate | rename | create_unique_column
   >>> # Create data
   >>> x1 = spark.createDataFrame(
   ...     [["a", "1"], ["b", "2"], ["c", "3"]], ["A", "B"]
   ... )
   >>> x2 = spark.createDataFrame(
   ...     [["b", "2"], ["c", "3"]], ["A", "B"]
   ... )
   >>> print_sdf(x1)
      A  B
   0  a  1
   1  b  2
   2  c  3
   >>> print_sdf(x2)
      A  B
   0  b  2
   1  c  3
   >>> y1 = transformation(x1)
   >>> y2 = transformation(x2)
   >>> print_sdf(y1)  # Note that the values below are in fact unique (after the 5B226)
      C  D                           A
   0  a  1  5B2261222C2231222C2231225D
   1  b  2  5B2262222C2232222C2231225D
   2  c  3  5B2263222C2233222C2231225D
   >>> print_sdf(y2)
      C  D                           A
   0  b  2  5B2262222C2232222C2231225D
   1  c  3  5B2263222C2233222C2231225D
   >>> # Check stability
   >>> input_metric.distance(x1, x2, input_domain)
   1
   >>> input_metric.distance(y1, y2, transformation.output_domain)
   1
   >>> # Check stability as if it was Augmented using AugmentDictTransformation
   >>> dict_x1 = {"start": x1}
   >>> dict_x2 = {"start": x2}
   >>> dict_y1 = {"start": x1, "end": y1}
   >>> dict_y2 = {"start": x2, "end": y2}
   >>> dict_input_domain = DictDomain({"start": input_domain})
   >>> dict_input_metric = AddRemoveKeys({"start": "A"})
   >>> dict_output_domain = DictDomain(
   ...     {
   ...         "start": input_domain,
   ...         "end": transformation.output_domain
   ...     }
   ... )
   >>> dict_output_metric = AddRemoveKeys({"start": "A", "end": "A"})
   >>> # Naively you would expect the stability to be 1, but in this example it is 2
   >>> dict_input_metric.distance(dict_x1, dict_x2, dict_input_domain)
   1
   >>> dict_output_metric.distance(dict_y1, dict_y2, dict_output_domain)
   2

   Conceptually, what is happening in the example above is that the transformation is
   changing the meaning of the key column. The column "A" that is in the input data is
   not the same as the column "A" that is in the output data, so removing one value, "a",
   in the input dictionary results in both "a" and "a,1" being removed in the output
   dictionary.











Classes
=======

.. list-table::

   * - :class:`.TransformValue`
     - Base class transforming a specified key using an existing transformation.
   * - :class:`.LimitRowsPerGroupValue`
     - Applies a :class:`~.LimitRowsPerGroup` to the specified key.
   * - :class:`.LimitKeysPerGroupValue`
     - Applies a :class:`~.LimitKeysPerGroup` to the specified key.
   * - :class:`.LimitRowsPerKeyPerGroupValue`
     - Applies a :class:`~.LimitRowsPerKeyPerGroup` to the specified key.
   * - :class:`.FilterValue`
     - Applies a :class:`~.Filter` to create a new element from specified value.
   * - :class:`.PublicJoinValue`
     - Applies a :class:`~.PublicJoin` to create a new element from specified value.
   * - :class:`.FlatMapByKeyValue`
     - Applies a :class:`~.FlatMapByKey` to create a new element from specified value.
   * - :class:`.FlatMapValue`
     - Applies a :class:`~.FlatMap` to create a new element from specified value.
   * - :class:`.MapValue`
     - Applies a :class:`~.Map` to create a new element from specified value.
   * - :class:`.DropInfsValue`
     - Applies a :class:`~.DropInfs` to create a new element from specified value.
   * - :class:`.DropNaNsValue`
     - Applies a :class:`~.DropNaNs` to create a new element from specified value.
   * - :class:`.DropNullsValue`
     - Applies a :class:`~.DropNulls` to create a new element from specified value.
   * - :class:`.ReplaceInfsValue`
     - Applies a :class:`~.ReplaceInfs` to create a new element from specified value.
   * - :class:`.ReplaceNaNsValue`
     - Applies a :class:`~.ReplaceNaNs` to create a new element from specified value.
   * - :class:`.ReplaceNullsValue`
     - Applies a :class:`~.ReplaceNulls` to create a new element from specified value.
   * - :class:`.PersistValue`
     - Applies a :class:`~.Persist` to create a new element from specified value.
   * - :class:`.UnpersistValue`
     - Applies a :class:`~.Unpersist` to create a new element from specified value.
   * - :class:`.SparkActionValue`
     - Applies a :class:`~.SparkAction` to create a new element from specified value.
   * - :class:`.RenameValue`
     - Applies a :class:`~.Rename` to create a new element from specified value.
   * - :class:`.SelectValue`
     - Applies a :class:`~.Select` to create a new element from specified value.

   
.. py:class:: TransformValue(input_domain, input_metric, transformation, key, new_key)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Base class transforming a specified key using an existing transformation.

   This class can be subclassed for the purposes of making a claim that a kind of
   Transformation (like :class:`~.Filter`) can be applied to a DataFrame and augment
   the input dictionary with the output without violating the closeness of neighboring
   dataframes with :class:`~.AddRemoveKeys`.

   NOTE: This class cannot be instantiated directly.






   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: LimitRowsPerGroupValue(input_domain, input_metric, key, new_key, threshold)

   Bases: :class:`TransformValue`

   Applies a :class:`~.LimitRowsPerGroup` to the specified key.

   See :class:`~.TransformValue` and :class:`~.LimitRowsPerGroup` for more
   information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: LimitKeysPerGroupValue(input_domain, input_metric, key, new_key, key_column, threshold)

   Bases: :class:`TransformValue`

   Applies a :class:`~.LimitKeysPerGroup` to the specified key.

   See :class:`~.TransformValue` and :class:`~.LimitKeysPerGroup` for more
   information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: LimitRowsPerKeyPerGroupValue(input_domain, input_metric, key, new_key, key_column, threshold)

   Bases: :class:`TransformValue`

   Applies a :class:`~.LimitRowsPerKeyPerGroup` to the specified key.

   See :class:`~.TransformValue` and :class:`~.LimitRowsPerKeyPerGroup` for more
   information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: FilterValue(input_domain, input_metric, key, new_key, filter_expr)

   Bases: :class:`TransformValue`

   Applies a :class:`~.Filter` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.Filter` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: PublicJoinValue(input_domain, input_metric, key, new_key, public_df, public_df_domain = None, join_cols = None, join_on_nulls = False)

   Bases: :class:`TransformValue`

   Applies a :class:`~.PublicJoin` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.PublicJoin` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: FlatMapByKeyValue(input_domain, input_metric, key, new_key, row_transformer)

   Bases: :class:`TransformValue`

   Applies a :class:`~.FlatMapByKey` to create a new element from specified value.

   See :class:`~.TransformValue` and :class:`~.FlatMapByKey` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: FlatMapValue(input_domain, input_metric, key, new_key, row_transformer, max_num_rows)

   Bases: :class:`TransformValue`

   Applies a :class:`~.FlatMap` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.FlatMap` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: MapValue(input_domain, input_metric, key, new_key, row_transformer)

   Bases: :class:`TransformValue`

   Applies a :class:`~.Map` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.Map` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: DropInfsValue(input_domain, input_metric, key, new_key, columns)

   Bases: :class:`TransformValue`

   Applies a :class:`~.DropInfs` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.DropInfs` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: DropNaNsValue(input_domain, input_metric, key, new_key, columns)

   Bases: :class:`TransformValue`

   Applies a :class:`~.DropNaNs` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.DropNaNs` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: DropNullsValue(input_domain, input_metric, key, new_key, columns)

   Bases: :class:`TransformValue`

   Applies a :class:`~.DropNulls` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.DropNulls` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: ReplaceInfsValue(input_domain, input_metric, key, new_key, replace_map)

   Bases: :class:`TransformValue`

   Applies a :class:`~.ReplaceInfs` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.ReplaceInfs` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: ReplaceNaNsValue(input_domain, input_metric, key, new_key, replace_map)

   Bases: :class:`TransformValue`

   Applies a :class:`~.ReplaceNaNs` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.ReplaceNaNs` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: ReplaceNullsValue(input_domain, input_metric, key, new_key, replace_map)

   Bases: :class:`TransformValue`

   Applies a :class:`~.ReplaceNulls` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.ReplaceNulls` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: PersistValue(input_domain, input_metric, key, new_key)

   Bases: :class:`TransformValue`

   Applies a :class:`~.Persist` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.Persist` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: UnpersistValue(input_domain, input_metric, key, new_key)

   Bases: :class:`TransformValue`

   Applies a :class:`~.Unpersist` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.Unpersist` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: SparkActionValue(input_domain, input_metric, key, new_key)

   Bases: :class:`TransformValue`

   Applies a :class:`~.SparkAction` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.SparkAction` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: RenameValue(input_domain, input_metric, key, new_key, rename_mapping)

   Bases: :class:`TransformValue`

   Applies a :class:`~.Rename` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.Rename` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: SelectValue(input_domain, input_metric, key, new_key, columns)

   Bases: :class:`TransformValue`

   Applies a :class:`~.Select` to create a new element from specified value.

   See :class:`~.TransformValue`, and :class:`~.Select` for more information.






   .. py:property:: transformation
      :type: tmlt.core.transformations.base.Transformation

      Returns the transformation that will be applied to create the new element.

   .. py:property:: key
      :type: Any

      Returns the key for the DataFrame to transform.

   .. py:property:: new_key
      :type: Any

      Returns the new key for the transformed DataFrame.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain

      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric

      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: __call__(data)

      Returns a new dictionary augmented with the transformed DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.






